# metadata-changer

./: Anchor.toml
programs/meta-data-changer/: Cargo.toml
programs/meta-data-changer/src/: lib.rs
tests/: meta-data-changer.ts
